# drf_p35

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  TODO  docker-compose.yaml  nginx.conf  pyproject.toml
apps/: admin.py  apps.py  filters.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/fixtures/: categories.json  districts.json  regions.json
apps/migrations/: 0001_initial.py
apps/models/: __init__.py  addresses.py  base.py  managers.py  orders.py  products.py  shops.py  users.py  utils.py
root/: celery.py  health.py  settings.py  urls.py
