[project]
name = "drf-p35"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.2",
    "django==5.2",
    "django-celery-beat==2.8.1",
    "django-celery-results>=2.6.0",
    "django-filter>=25.2",
    "django-mptt>=0.18.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "flower>=2.0.1",
    "gunicorn>=25.0.1",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "python-dotenv>=1.2.1",
]
